# eophis

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml  apptainer_eophis.def  container.yml  doc.yml  make.gnu  python-documentation.yml  unit_test.yml
docs/: eophis.yml  pyOASIS_installation.md  pyoasis.yml  requirements.txt
docs/machine/arch/: make.jeanzay
docs/machine/envs/: pyoasis.yml
docs/source/: api.rst  concept.rst  concept_motivation.rst  concept_object.rst  conf.py  eophis.coupling.rst  eophis.domain.rst  eophis.rst  eophis.utils.rst  eophis_installation.md  getting_started.rst  index.rst  install.rst  license.rst  modules.rst  overview.rst  tests.rst  tutorial.rst  usage.rst
eophis/: __init__.py  loop.py
eophis/coupling/: __init__.py  grid.py  namcouple.py  namelist.py  tunnel.py
eophis/domain/: __init__.py  cyclichalo.py  grid.py  halo.py  nfhalo.py  offsiz.py
eophis/utils/: __init__.py  logs.py  params.py  worker.py
src/: namcouple_base  namcouple_ref
src/eophis/: __init__.py  inference.py  loop.py
src/eophis/coupling/: __init__.py  cpl.py  grid.py  namcouple.py  namelist.py  namelists.py  tunnel.py
src/eophis/utils/: __init__.py  logs.py  paral.py  params.py  worker.py
tests/: README.md  run_all_tests.sh  test_eophis.py
tests/coupled_test/: Makefile  fake_earth.py  main.py  models.py  run.sh
tests/halo_decomposition/: Makefile  earth_namelist  fake_earth.py  main.py  models.py  toy_earth.py
tests/tuto/: earth_namelist_tuto  eophis_script_tuto.py  models_tuto.py  prod_tuto.py  toy_earth_tuto.py
tests/unit_tests/: test_cyclichalo.py  test_grid.py  test_halo.py  test_logs.py  test_namcouple.py  test_namelist.py  test_nfhalo.py  test_nfhalo_FF.py  test_nfhalo_FT.py  test_nfhalo_TF.py  test_nfhalo_TT.py  test_nfhalo_UT.py  test_nfhalo_VF.py  test_nfhalo_VT.py  test_offsiz.py  test_params.py  test_tunnel.py  test_worker.py
tests/write_and_couple/: Makefile  earth_namelist  fake_earth.py  main.py  models.py  toy_earth.py
tuto/: models_tuto.py  preprod_tuto.py  toy_earth_tuto.py
