[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eophis"
version = "0.9.1"
description = "Tools to couple Inferences Models with Earth-System simulation codes"
authors = [
  { name="Alexis Barge", email="alexis.barge@proton.me" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10.4"

dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/meom-group/eophis"
"Bug Tracker" = "https://github.com/meom-group/eophis/issues"

[tool.setuptools]
package-dir = {}
