[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eophis"
version = "1.0.1"
description = "Tools to couple Python and Machine Learning models with Geophysical simulation codes through OASIS."
authors = [ { name="Alexis Barge", email="alexis.barge@proton.me" }, 
	    { name = "Julien Le Sommer", email = "julien.lesommer@univ-grenoble-alpes.fr" },]
readme = "README.md"
license = {file = "LICENSE"}

keywords = ["machine-learning", "fortran", "python", "coupling", "geoscientific", "earth-system", "OASIS"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10.4"
dependencies = [
    "netcdf4>=1.5.8",
    "numpy>=1.21.0",
    "f90nml>=1.4.4",
    "watermark>=2.4.3",
    "mpi4py>=3.1.5",
]

[project.optional-dependencies]
dev = ["pytest", "sphinx", "sphinx-rtd-theme", "myst_parser"]

[external]
build-requires = [
  "virtual:compiler/c",
  "virtual:compiler/fortran",
]
host-requires = [
  "pkg:https://github.com/Unidata/netcdf-c/releases/tag/v4.7.2",
  "pkg:https://github.com/Unidata/netcdf-fortran/releases/tag/v4.5.2",
  "pkg:https://https://www.open-mpi.org/"
]

[project.urls]
"Homepage" = "https://github.com/meom-group/eophis"
"Bug Tracker" = "https://github.com/meom-group/eophis/issues"

[tool.setuptools]
packages = ["eophis"]
package-dir = {"" = "."}

